syntax = "proto3";

option go_package = "github.com/znkisoft/watchdog/schema";

import "google/protobuf/timestamp.proto";
import "models.proto";

message ServerStatusResponse {
  enum Status {
    SERVER_STATUS_UNKNOWN = 0;
    UP = 1;
    DOWN = 2;
  }
  Status status = 1;
  google.protobuf.Timestamp last_updated = 2;
}

message PluginResponse {
  oneof PluginInfo {
    UptimeInfo uptime_info = 1;
    SysTimeInfo sys_time_info = 2;
  }
}

message PluginListResponse {
  repeated string plugins = 1;
}


message UserverResponse {
  repeated Userver uservers = 1;
}